--- a/svc_std/Cargo.toml
+++ b/svc_std/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex = "1.10.2"
+# regex = "1.10.2"
+argon2 = "0.5.2"
+fancy-regex = "0.11.0"
 
 [dependencies.uuid]
 version = "1.5.0"
